# thyra

./: .codecov.yml  .env  .flake8  .gitignore  .pre-commit-config-gradual.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASK_SIMPLIFICATION_PLAN.md  DataStructureDebugger.py  FUNCTION_CALL_FLOW.md  GEMINI.md  MSI2VisiumHD.py  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_V2.md  PLANNING.MD  PRECOMMIT_MIGRATION.md  PRE_COMMIT_MANUAL_FIXES.md  README.md  REGISTRY_REFACTORING_PLAN.md  RESAMPLING_IMPLEMENTATION_PLAN.md  TASK.md  errors.txt  intensity_sum_analysis.py  intermediate_format_plan.md  msi_resampling_spec.md  napari_viewer.py  precommit_issues_and_fixes.md  pyproject.toml  requirements.txt  sdata_msi_documentation.md  setup.py  simple_test.py  test.ipynb  test.py  test_metadata_saving.py  test_new_precommit.py  test_pixel_detection.py  (+3 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: complexity-monitoring.yml  release.yml  tests.yml
docs/: FUNCTION_CALL_FLOW.md  TASK.md
msi-converter/imzml/: utils.py
msiconvert/: __init__.py  __main__.py  config.py  convert.py
msiconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
msiconvert/converters/: __init__.py  anndata-converter.py  anndata_converter.py  lightweight_converter.py  spatialdata_converter.py
msiconvert/converters/spatialdata/: __init__.py  base_spatialdata_converter.py  converter.py  spatialdata_2d_converter.py  spatialdata_3d_converter.py
msiconvert/core/: __init__.py  base_converter.py  base_extractor.py  base_reader.py  registry.py
msiconvert/imzml/: checker.py  convertor.py  format.py  parser.py
msiconvert/io/: __init__.py  base_converter.py  bruker_converter.py  bruker_convertor.py  imzml_converter.py  imzml_convertor.py  msi_convert.py  registry.py
msiconvert/metadata/: __init__.py  extractor.py  types.py  validator.py
msiconvert/metadata/core/: __init__.py  base_extractor.py
msiconvert/metadata/extractors/: __init__.py  bruker_extractor.py  imzml_extractor.py
msiconvert/metadata/ontology/: _ms.py  cache.py
msiconvert/readers/: __init__.py  bruker_reader.py  imzml_reader.py
msiconvert/readers/bruker/: __init__.py  bruker_reader.py
msiconvert/readers/bruker/core/: __init__.py  base_reader.py  exceptions.py  registry.py
msiconvert/readers/bruker/sdk/: __init__.py  dll_manager.py  platform_detector.py  sdk_functions.py
msiconvert/readers/bruker/utils/: __init__.py  batch_processor.py  coordinate_cache.py  mass_axis_builder.py  memory_manager.py
msiconvert/resampling/: __init__.py  common_axis.py  decision_tree.py  types.py
msiconvert/resampling/mass_axis/: __init__.py  base_generator.py  fticr_generator.py  linear_generator.py  linear_tof_generator.py  orbitrap_generator.py  reflector_tof_generator.py
msiconvert/resampling/strategies/: __init__.py  base.py  nearest_neighbor.py  tic_preserving.py
msiconvert/tools/: __init__.py  check_ontology.py
msiconvert/utils/: __init__.py  bruker_exceptions.py  data_processors.py  logging_config.py  temp_store.py  zarr_manager.py
reports/complexity/: complexity_report_20250801_155821.json  complexity_report_20250801_161057.json  complexity_report_20250801_161310.json
scripts/: README_complexity_monitoring.md  check_complexity.sh  complexity_config.json  complexity_monitor.py  pre-commit-complexity-hook.yaml
tests/: README.md  conftest.py  pytest.ini  test_checker.py  test_convertor.py  test_format.py  test_parser.py  test_temp_store.py  test_utils.py
tests/benchmarks/: test_registry_performance.py
tests/data/: test_continuous.ibd  test_continuous.imzML  test_processed.ibd  test_processed.imzML
tests/integration/: test_bruker_real_data.py  test_cli.py  test_convert_bruker.py  test_convert_imzml.py  test_full_spatialdata_conversion.py
tests/unit/: test_base_classes.py  test_registry.py
tests/unit/converters/: test_anndata_converter.py  test_lightweight_converter.py  test_spatialdata_converter.py
tests/unit/metadata/: __init__.py  test_extractor.py
tests/unit/metadata/core/: __init__.py  test_base_extractor.py  test_metadata_types.py
tests/unit/metadata/extractors/: __init__.py  test_bruker_extractor.py  test_imzml_extractor.py
tests/unit/readers/: test_bruker_reader.py  test_bruker_reader_comprehensive.py  test_bruker_reader_phase1.py  test_bruker_reader_simplified.py  test_imzml_reader.py
tests/unit/resampling/: __init__.py  test_basic_structure.py  test_decision_tree.py  test_strategies.py
tests/unit/tools/: test_check_ontology.py
tests/unit/utils/: test_data_processors.py  test_logging_config.py
